# soft_eng_tutorals

./: README.md
C++/: CMakeLists.txt
C++/snippets/: finite_difference.cpp  finite_difference.h  test_finite_difference.cpp
C++/src/: CMakeLists.txt  cg.cpp  cg.h  cg_stl.cpp  cg_stl.h
C++/src/derivatives/: CMakeLists.txt  finite_difference.cpp  finite_difference.h
C++/src/integration/: CMakeLists.txt  integration.cpp  integration.h
C++/src/optimisers/: CMakeLists.txt  cg.cpp  cg.h  cg_arma.cpp  cg_arma.h  cg_base_class.cpp  cg_base_class.h  cg_class.cpp  cg_class.h  cg_stl.cpp  cg_stl.h  cg_template.h  finite_difference.cpp  finite_difference.h  line_search.cpp  line_search.h
C++/src/test_functions/: CMakeLists.txt  test_functions.cpp  test_functions.h
C++/unit_tests/: CMakeLists.txt  test_cg.cpp  test_cg_arma.cpp  test_cg_class.cpp  test_cg_std.cpp  test_cpp_template.cpp  test_integration.cpp  test_test_functions.cpp
python/: .gitignore  Makefile  pyproject.toml
python/jupyter/: finite_difference.ipynb
python/src/: cg.py  cg_abstract_class.py  cg_class.py  cg_plugin.py  finite_difference.py  linesearch.py  optimiser_func_set.py  second_cg.py
python/src/IMPRESPython/: cg_class.py  cg_plugin.py  finite_difference.py  optimiser_func_set.py
python/src/IMPRSPython/: cg.py  finite_difference.py  optimiser_func_set.py  radial_schrodinger.py  second_cg.py
python/test/: test_cg.py  test_finite_difference.py  test_optimiser_func_set.py
